--- a/fly.toml
+++ b/fly.toml
@@ -1,37 +1,23 @@
-# fly.toml file generated for y-webrtc-eu on 2023-03-16T15:02:47+01:00
+# fly.toml app configuration file generated for y-webrtc-eiger on 2026-02-13T19:28:13Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-app = "y-webrtc-eu"
-kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
+app = 'y-webrtc-eiger'
+primary_region = 'ams'
 
-[env]
+[build]
 
-[experimental]
-  auto_rollback = true
+[http_service]
+  internal_port = 4444
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
-[[services]]
-  http_checks = []
-  internal_port = 8080
-  processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
-  [services.concurrency]
-    hard_limit = 25
-    soft_limit = 20
-    type = "connections"
-
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-  [[services.tcp_checks]]
-    grace_period = "1s"
-    interval = "15s"
-    restart_limit = 0
-    timeout = "2s"
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 256
